# QT_Cplusplus_Opdracht

./: CMakeLists.txt  Creatureclass.cpp  Creatureclass.h  README.md  battlescreen.cpp  battlescreen.h  battlescreen.ui  characterclass.cpp  characterclass.h  choicescreen.cpp  choicescreen.h  choicescreen.ui  creaturedatabase.cpp  creaturedatabase.h  enemyclass.cpp  enemyclass.h  gamemanager.cpp  gamemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  move.h  partyscreen.cpp  partyscreen.h  playerclass.cpp  playerclass.h  resources.qrc  startscreen.cpp  startscreen.h  startscreen.ui  storescreen.ui  totalmovesclass.cpp  totalmovesclass.h
FormFiles/: battlescreen.ui  choicescreen.ui  partyscreen.ui
HeaderFiles/: Creatureclass.h  battlescreen.h  characterclass.h  gamemanager.h  mainwindow.h  playerclass.h
ProjectFiles/: Creatureclass.cpp  Creatureclass.h  battlescreen.cpp  battlescreen.h  battlescreen.ui  characterclass.cpp  characterclass.h  characterdebugger.h  characterserializer.h  choicescreen.cpp  choicescreen.h  choicescreen.ui  equipment.h  gamemanager.cpp  gamemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  move.h  partyscreen.cpp  partyscreen.h  partyscreen.ui  playerclass.cpp  playerclass.h  startscreen.ui  storescreen.h  totalmovesclass.cpp  totalmovesclass.h
SourceFiles/: Creatureclass.cpp  battlescreen.cpp  characterclass.cpp  creaturedatabase.cpp  gamemanager.cpp  mainwindow.cpp  playerclass.cpp  storescreen.cpp  totalmovesclass.cpp
Style/: gameStyle.qss
